* Ipay88: New gateway [kamal, siong1987, jduff]
* IATS: New gateway [unkown, jduff]
* MerchantWarrior: Send the CVV to the gateway [duff]
* PayU: Fix a major bug with status types [melari]
* SecureNet: Allow production transactions [duff]
* Stripe: Allow a card_not_present_fee to be specified [melari]
* Moneris: Add verification_value support [duff]

== Version 1.36.0 (August 2, 2013)

* Fat Zebra: More consistent handling of tokens [adrianmacneil]
* Add Platron integration [alexwl]
* Litle: Support wiredump_device [pierre]
* Litle: support paypage registrations [pierre]
* SecureNet: Cleanup and refactoring [duff]
* Mercury: Proper refund and void support [opendining]
* PaymentExpress: Return token in authorization [ntalbott]
* Stripe: Support for partial application fee refunds [melari, odorcicd]
* NMI: Support for recurring flag [duff]
* SecureNet: Use working live url [duff]

== Version 1.35.1 (July 22, 2013)

* Stripe: Allow application_fees to be refunded via the refund_application_fee flag [melari]

== Version 1.35.0 (July 17, 2013)

* Add Barclays ePDQ Extra Plus gateway [ntalbott]
* PayPal: Add MassPay payment to recipients by UserID [damonmorgan]
* Authorize.Net: Add authorization_code to response params [noahlh]
* Make Rails 4 a supported version [sanemat]
* CyberSource: Add pinless debit card support [JoshMcKin]
* Verkkomaksut: Add item title field [kaapa]
* Add MerchantWare V4 gateway [hron]
* Eway Rapid: Add #store method [adrianmacneil]
* Barclays ePDQ Extra Plus: Use correct PROD url [ntalbott]
* Hitrust: update test & live urls [melari]
* NAB Transact: Add auth & capture support [nagash]
* Mercury: Support card-less capture and refund [ntalbott]
* Mercury: Support void [ntalbott]

== Version 1.34.1 (June 28, 2013)

* WorldPay: Add dynamic return URL [jordanwheeler]
* Merchant One: New gateway [coteyr, melari]
* Balanced: Fix exception for invalid email [duff]
* Update supported countries for Paymill & PaymentExpress [duff]